[package]
name = "walle"
version = "0.5.0"
authors = ["Sonny Scroggin"]
edition = "2021"

[lib]
name = "walle"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.30"
ethers = { version = "2.0", features = ["eip712"] }
tempfile = "3.10"
rand = "0.8.5"
tokio = "1.37.0"
once_cell = "1.19.0"
serde_json = "1.0.115"
